# LoRA-DARTS

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
analysis/: LoRA-RDARTS-Analysis.ipynb
examples/: get_genotype_from_log.py  run_darts.py  run_lora_darts.py
scripts/jobs/: run_all_lora_experiments.sh  run_all_non_lora_experiments.sh  submit_lora_experiment.sh  submit_non_lora_experiment.sh  submit_robust_darts.sh  submit_train_genotype_jobs.sh  train_discrete_genotype.sh
scripts/lora/: run_darts_experiment.py  run_robust_darts_experiment.py
scripts/train_discrete/: train_genotype.py
scripts/train_discrete/genotypes_to_train/: genotype_1.txt
src/confopt/benchmarks/: __init__.py  benchmark_base.py  nb301_benchmark.py
src/confopt/dataset/: __init__.py  data.py  imgnet16.py
src/confopt/oneshot/: base_component.py  lora_toggler.py  weightentangler.py
src/confopt/oneshot/archsampler/: __init__.py  base_sampler.py
src/confopt/oneshot/archsampler/darts/: sampler.py
src/confopt/oneshot/archsampler/drnas/: sampler.py
src/confopt/oneshot/dropout/: __init__.py  dropout.py
src/confopt/profiles/: __init__.py  profile_config.py  profiles.py
src/confopt/searchspace/: __init__.py
src/confopt/searchspace/common/: __init__.py  base_search.py  lora_layers.py  mixop.py
src/confopt/searchspace/darts/: supernet.py
src/confopt/searchspace/darts/core/: __init__.py  genotypes.py  model.py  model_search.py  operations.py
src/confopt/searchspace/robust_darts/: supernet.py
src/confopt/searchspace/robust_darts/core/: __init__.py  model_search.py  operations.py  spaces.py
src/confopt/train/: __init__.py  configurable_trainer.py  discrete_trainer.py  experiment.py  searchprofile.py
src/confopt/utils/: __init__.py  checkpoints.py  dict2config.py  logger.py  time.py
tests/: conftest.py  pytest.ini  test_lora.py  test_oneshot.py  test_profiles.py  test_searchspace.py  test_utils.py  test_weight_entangler.py  utils.py
